fix spacing on footer links

--- a/src/pages/AboutPage/about.module.scss
+++ b/src/pages/AboutPage/about.module.scss
@@ -103,7 +103,7 @@
     flex-wrap: wrap;
     padding: 1rem;
     height: 8rem;
-    justify-content: space-evenly;
+    justify-content: space-between;
 
     > * {
       margin-right: 0;
@@ -119,7 +119,7 @@
 
     .linkTwitter,
     .linkDiscord {
-      width: 20%;
+      width: 32%;
       font-size: 1.1rem;
     }
 
